# MCseg

./: .gitignore  .venv  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  README_zh.md  SESSION_RESUME.md  execution_trace.md  index.html  plan.md  pyproject.toml  start.sh  summary.md  test_pipeline.py  update_samples.py
analysis/data/: SuppTable1_crc_metrics_per_roi.csv  cell_shape_circularity.csv  luad_benchmark_pq_per_roi.csv  luad_benchmark_results.csv  luad_roi10_at1at2_detection_rates.csv  luad_roi9_spp1_macrophage_markers.csv  luad_validation.csv  luad_validation_v2.csv  metrics_ac.csv  metrics_de.csv  p3_sweep_results.csv  perpair_doublet_rates.csv  roi10_platform_comparison.csv  roi15_cluster_markers.csv  stats_friedman.csv  stats_pairwise.csv  tas.csv  tas_summary.csv
analysis/manuscript/: manuscript.md
analysis/scripts/analysis/: 01_prepare_masks.py  02_bin_attribution.py  03_build_anndata.py  04_metrics_transcript_capture.py  05_metrics_expression_purity.py  06_tas_score.py  07_statistical_tests.py  08_luad_benchmark.py
analysis/scripts/analysis/enact_crc_benchmark/: enact_C1_crc_f1_comparison.py  enact_C2_crc_f1_wba.py  viz_enact_celltype_overlay.py  viz_gt_overlay.py  viz_mcseg_vs_stardist_overlay.py
analysis/scripts/analysis/treg_crc/: 00_resegment_highres.py  01_compute_centroids_highres.py  02_nearest_neighbor.py  03_density_morans.py  04_treg_microenv.py  05_spp1_nn.py  07_roi_he_mask_overlay_highres.py  08_assemble_S11_highres.py  (+3 more)
analysis/scripts/figures/: fig1a_pipeline_schematic.py  fig1b_xenium_comparison.py  fig1bcde_panels.py  fig2_at1_evidence.py  fig2a_autoResearch_evolution.py  fig2b_segmentation_panels.py  fig2c_ablation_landscape.py  fig2d_leiden_celltype_map.py  fig2de_luad_pq_benchmark.py  fig2fg_spatial_expression.py  fig2g_leiden_dotplot.py  fig2h_roi10_comparison.py  fig2i_roi10_umap.py  fig3a_transcript_metrics.py  fig3b_crc_segmentation.py  fig4_tls_clustering_markers.py
analysis/supplementary/: Supplementary_Note_1.md  Supplementary_Table_S1.csv  Supplementary_Table_S2.csv
backend/: __init__.py  main.py
backend/src/analysis/: clustering.py  pipeline.py  preprocessing.py
backend/src/api/: __init__.py  analysis.py  cellpose_count.py  conditions.py  data.py  export.py  proseg.py  proseg_rna.py  roi.py  segmentation.py  spatial.py  zarr_builder.py
backend/src/cellpose_counter/: __init__.py  counter.py
backend/src/cli/: __init__.py  segment.py
backend/src/export/: loupe_exporter.py  xenium_exporter.py
backend/src/proseg/: __init__.py  condition_tester.py  pipeline.py  runner.py  zarr_handler.py
backend/src/roi/: extractor.py  tile_server.py
backend/src/segmentation/: cellpose_runner.py  macenko.py
backend/src/utils/: config.py  constants.py  discovery.py  logging.py
backend/src/zarr_builder/: __init__.py  builder.py
backend/tests/: __init__.py  conftest.py  test_01_infra.py  test_02_data.py  test_03_api.py  test_04_roi.py  test_05_xenium.py  test_skill_scripts.py
config/: pipeline.yaml
config/profiles/: crc.yaml  luad.yaml
css/: style.css
docs/: implementation_plan.md
docs/autoResearch/: README.md  program.md  run_agent.py  segment_template.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/hooks/: useStageLog.ts  useStageStatus.ts
frontend/src/i18n/: index.ts  translations.ts
frontend/src/pages/: DataSetup.tsx  Stage0_ROI.tsx  Stage1_Segmentation.tsx  Stage25_ProsegRNA.tsx  Stage2_Count.tsx  Stage2_Zarr.tsx  Stage2b_ConditionTest.tsx  Stage35_SpatialExplorer.tsx  Stage3_Analysis.tsx  Stage3_Proseg.tsx  Stage4_Analysis.tsx  Stage4_Export.tsx  Stage5_Export.tsx
frontend/src/stores/: languageStore.ts  pipelineStore.ts
frontend/src/types/: pipeline.ts
js/: app.js  segmentation.js  utils.js  visualization.js
proseg-output.zarr/points/transcripts/: .zattrs
proseg-output.zarr/shapes/cell_boundaries/: .zattrs  shapes.parquet
proseg-output.zarr/tables/table/: .zattrs
scripts/: build_full_adata.py  export_mcseg.py  qc_metrics.py  roi_sampler.py  run_analysis.py  seg_quality.py  test_parse.js
scripts/temp/: compare_proseg_vanilla.py  run_test_to_xenium.py
skills/: README.md  msseg-analyze.md  msseg-segment.md
skills/scripts/: build_full_adata.py  qc_metrics.py  setup_env.py  write_handoff.py
(+89 files in other folders)
