[project]
name = "visiumhd-pipeline-2"
version = "2.0.0"
description = "VisiumHD Pipeline 2：ROI 裁切 + 條件測試 + Browser 匯出 + React UI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # === Web 後端 ===
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # === 核心分析 ===
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "squidpy>=1.3.0",

    # === 影像處理與分割 (Stage 1) ===
    "cellpose",
    "opencv-python-headless>=4.13.0",
    "tifffile>=2025.5.10",
    "scikit-image>=0.24.0",
    "fastremap",
    "torch",
    "torchvision",

    # === Zarr 建構 (Stage 2) ===
    "zarr>=2.18.3,<3.0.0",
    "dask[array,dataframe]>=2024.1.0",
    "dask-expr",
    "numcodecs",
    "spatialdata>=0.2.6",
    "geopandas>=1.1.2",
    "shapely",
    "pyarrow>=14.0.0",

    # === Browser 匯出 (Stage 5) ===
    "spatialdata-xenium-explorer",
    "loupepy",
    "ijson>=3.2.0",

    # === 資料處理 ===
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",

    # === 視覺化 ===
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "pillow>=10.0.0",

    # === 配置與工具 ===
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",

    # === 統計與機器學習 ===
    "scikit-learn>=1.3.0",
    "leidenalg>=0.11.0",
    "scikit-misc",

    # === 下游分析 ===
    "celltypist>=1.7.1",
    "setuptools<72",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "jupyterlab",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
